cluster-configs/dev/k3s/002-registry/10-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
    - name: docker-registry
      protocol: TCP
      port: 5000
  type: ClusterIP
